--- a/src/customer/MainInterface.form
+++ b/src/customer/MainInterface.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="resizable" type="boolean" value="false"/>
@@ -162,20 +162,25 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="TabMenu" pref="507" max="32767" attributes="0"/>
+                              <Component id="TabMenu" pref="500" max="32767" attributes="0"/>
                               <Group type="102" alignment="1" attributes="0">
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Component id="lbDaftarMenu" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="102" alignment="1" attributes="0">
+                                  <EmptySpace max="32767" attributes="0"/>
+                                  <Component id="btTambahMenu" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
+                              </Group>
                               <Group type="102" attributes="0">
-                                  <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="lbHargaProdukSatuan" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                          <Component id="tfHargaProdukSatuan" pref="195" max="32767" attributes="0"/>
+                                          <Component id="tfHargaProdukSatuan" max="32767" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="lbHargaProdukTotal" min="-2" max="-2" attributes="0"/>
@@ -189,16 +194,11 @@
                                       </Group>
                                       <Component id="tfTotalBiaya" alignment="0" max="32767" attributes="0"/>
                                       <Component id="lbTotalBiaya" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <EmptySpace pref="114" max="-2" attributes="0"/>
-                                          <Component id="lbNamaMenu" min="-2" max="-2" attributes="0"/>
+                                      <Group type="102" alignment="1" attributes="0">
+                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                          <Component id="lbNamaMenu" min="-2" pref="282" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
-                              </Group>
-                              <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace max="32767" attributes="0"/>
-                                  <Component id="btTambahMenu" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -213,14 +213,15 @@
                   <EmptySpace pref="41" max="32767" attributes="0"/>
                   <Component id="lbDaftarMenu" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Group type="102" attributes="0">
                           <Component id="TabMenu" min="-2" pref="455" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
-                          <Component id="lbNamaMenu" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+                          <Component id="lbNamaMenu" min="-2" pref="62" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="lbHargaProdukSatuan" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="tfHargaProdukSatuan" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -429,9 +430,10 @@
         <Component class="javax.swing.JLabel" name="lbNamaMenu">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Trebuchet MS" size="11" style="0"/>
+              <Font name="Trebuchet MS" size="24" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Produk"/>
+            <Property name="horizontalAlignment" type="int" value="0"/>
+            <Property name="text" type="java.lang.String" value="Menu"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lbHargaProdukSatuan">
@@ -541,7 +543,6 @@
                                   <Component id="lbPembayaran" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="lbTotalBiaya1" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="lbUangAnda" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -549,7 +550,7 @@
                                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="tfInputUang" min="-2" pref="579" max="-2" attributes="0"/>
-                                      <Component id="tfTotalBiaya1" min="-2" pref="579" max="-2" attributes="0"/>
+                                      <Component id="tfTotalBiayaTransaksi" min="-2" pref="579" max="-2" attributes="0"/>
                                       <Component id="tfNoTransaksi" alignment="0" min="-2" pref="579" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -597,7 +598,7 @@
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="tfTotalBiaya1" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="tfTotalBiayaTransaksi" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       <Component id="lbTotalBiaya1" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -653,7 +654,7 @@
             <Property name="text" type="java.lang.String" value="Total Biaya Anda"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="tfTotalBiaya1">
+        <Component class="javax.swing.JTextField" name="tfTotalBiayaTransaksi">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="text" type="java.lang.String" value="Rp. 0"/>
